Details
-
Bug
-
Status: Closed
-
P3: Somewhat important
-
Resolution: Done
-
5.15.6
-
-
36a6d17af00cf6b2ed4160194b1861208dcdd616 (qt/qtbase/dev) f6334cd9349bff5985e313cd8874eac97ae95006 (qt/qtbase/6.2) cd64d21453137f3028b1785f3ba77fcb698ba1a1 (qt/tqtc-qtbase/5.15)
Description
It seems that sometimes QWidget beneath the container QWidget won't receive the mouse clicks which go through the QOpenGLWindow if a QOpenGLWindow with Qt::WindowTransparentForInput flag is created and then a containter QWidget is created by calling QWidget::createWindowContainer().
Way to reproduce:
1) On Windows, Build and run the Qt example: affine (qtbase/examples/widgets/painting/affine)
2) Stop animation by clicking 'Animate' button
3) Click "Use OpenGL" button (Please note that if the view on the left shows some artifact, please resize the top level window to refresh the content),
4) Try to move the penguin by dragging a circular anchor point in the view, which should be possible but due to this bug isn't.
Issue does not reproduce on macOS or Linux
Attachments
For Gerrit Dashboard: QTBUG-97095 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
376359,4 | Windows QPA: Fix mouse event position for QWindows with Qt::WindowTransparentForInput | dev | qt/qtbase | Status: MERGED | +2 | 0 |
376434,6 | Polish the painting/affine example | dev | qt/qtbase | Status: MERGED | +2 | 0 |
376497,2 | Windows QPA: Fix mouse event position for QWindows with Qt::WindowTransparentForInput | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |
376500,3 | Windows QPA: Fix mouse event position for QWindows with Qt::WindowTransparentForInput | tqtc/lts-5.15 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
376957,2 | Polish the painting/affine example | 6.2 | qt/qtbase | Status: MERGED | +2 | 0 |