Windows QPA: Fix mouse event position for QWindows with Qt::WindowTransparentForInput

The local position needs to be corrected when the Qt receiver window
does not correspond to the native event receiver window.

Fixes: QTBUG-97095
Change-Id: Ic9fa3d84b6ee84ae5f8fa2408b0d60e35dbfa328
Reviewed-by: André de la Rocha <andre.rocha@qt.io>
(cherry picked from commit 36a6d17af00cf6b2ed4160194b1861208dcdd616)